Fix style and spacing

--- a/app/front/src/app/component/manage-dashboard-base/manage-dashboard-base.component.scss
+++ b/app/front/src/app/component/manage-dashboard-base/manage-dashboard-base.component.scss
@@ -3,9 +3,13 @@
 :host {
   width: 100%;
   height: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .manage-dashboard-base-container {
+  flex: 1;
   width: 100%;
   height: 100%;
   display: flex;
@@ -19,7 +23,7 @@
   }
 
   section {
-    margin-bottom: 50px;
+    margin-bottom: 25px;
     width: 100%;
 
     .section-header {
@@ -32,6 +36,7 @@
   }
 
   .hashtag-section {
+    margin-bottom: 35px;
     .hashtag-list-container {
       width: 80%;
       display: flex;
@@ -46,7 +51,7 @@
 
   .action-buttons {
     display: flex;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     justify-content: flex-end;
 
     app-new-notemon-button {
@@ -69,8 +74,8 @@
       flex-wrap: wrap;
 
       app-directory-card-main, app-note-card-main, app-notemon-card-variant {
-        margin-bottom: 15px;
-        margin-right: 15px;
+        margin-bottom: 13.5px;
+        margin-right: 13.5px;
       }
     }
   }
